--- a/automations/shades.yaml
+++ b/automations/shades.yaml
@@ -15,9 +15,8 @@
   action:
     service: cover.open_cover
     entity_id:
-      - cover.living_room
-      - cover.dining_room
-      # - cover.office
+      - cover.living_room_shades
+      - cover.dining_room_shades
 
 - alias: Close shades in the evening
   trigger:
