--- a/integrations/light.yaml
+++ b/integrations/light.yaml
@@ -90,11 +90,10 @@
     - light.office_closet_east_overhead
     - light.office_closet_west_overhead
 
-- platform: group
-  name: Office Overhead
-  entities:
-    - light.office_overhead_1
-    - light.office_overhead_2
-# - platform: switch
-#   name: Front Porch Stairs
-#   entity_id: switch.front_porch_stairs_plug
+- platform: switch
+  name: Front Porch Stairs Lights
+  entity_id: switch.front_porch_stairs_plug
+
+- platform: switch
+  name: Living Room Christmas Tree Lights
+  entity_id: switch.living_room_christmas_tree_plug
