--- a/integrations/lovelace.yaml
+++ b/integrations/lovelace.yaml
@@ -2,3 +2,5 @@ mode: yaml
 resources:
   - url: /hacsfiles/group-card/group-card.js
     type: module
+  - url: /hacsfiles/vertical-stack-in-card/vertical-stack-in-card.js
+    type: module
