--- a/customize.yaml
+++ b/customize.yaml
@@ -1,199 +1,3 @@
-# Lights
-light.back_porch_light:
-  icon: mdi:outdoor-lamp
-
-light.bonus_room_nook_overhead:
-  icon: mdi:ceiling-light
-
-light.bonus_room_overhead:
-  icon: mdi:ceiling-light
-
-light.bonus_room_overhead_1:
-  icon: mdi:ceiling-light
-
-light.bonus_room_overhead_2:
-  icon: mdi:ceiling-light
-
-light.dining_room_overhead:
-  icon: mdi:ceiling-light
-
-light.dining_room_overhead_1:
-  icon: mdi:ceiling-light
-
-light.dining_room_overhead_2:
-  icon: mdi:ceiling-light
-
-light.dining_room_overhead_3:
-  icon: mdi:ceiling-light
-
-light.entryway_overhead:
-  icon: mdi:ceiling-light
-
-light.entryway_overhead_1:
-  icon: mdi:ceiling-light
-
-light.entryway_overhead_2:
-  icon: mdi:ceiling-light
-
-light.front_porch_light:
-  icon: mdi:outdoor-lamp
-
-light.garage_south_overhead:
-  icon: mdi:wall-sconce-flat
-
-light.garage_east_overhead:
-  icon: mdi:wall-sconce-flat
-
-light.garage_hallway_overhead:
-  icon: mdi:ceiling-light
-
-light.garage_hallway_overhead_1:
-  icon: mdi:ceiling-light
-
-light.garage_hallway_overhead_2:
-  icon: mdi:ceiling-light
-
-light.garage_north_overhead:
-  icon: mdi:wall-sconce-flat
-
-light.garage_west_overhead:
-  icon: mdi:wall-sconce-flat
-
-light.garage_shop_overheads:
-  icon: mdi:wall-sconce-flat
-
-light.garage_stairs_overhead:
-  icon: mdi:ceiling-light
-
-light.garage_stairs_overhead_1:
-  icon: mdi:ceiling-light
-
-light.garage_stairs_overhead_2:
-  icon: mdi:ceiling-light
-
-light.guest_bedroom_lamp:
-  icon: mdi:lamp
-
-light.guest_bedroom_overhead:
-  icon: mdi:ceiling-light
-
-light.guest_bedroom_overhead_1:
-  icon: mdi:ceiling-light
-
-light.guest_bedroom_overhead_2:
-  icon: mdi:ceiling-light
-
-light.hallway_overhead:
-  icon: mdi:ceiling-light
-
-light.hallway_overhead_1:
-  icon: mdi:ceiling-light
-
-light.hallway_overhead_2:
-  icon: mdi:ceiling-light
-
-light.kitchen_overhead:
-  icon: mdi:ceiling-light
-
-light.kitchen_overhead_1:
-  icon: mdi:ceiling-light
-
-light.kitchen_overhead_2:
-  icon: mdi:ceiling-light
-
-light.kitchen_recessed_overhead:
-  icon: mdi:wall-sconce-round
-
-light.living_room_arc_lamp:
-  icon: mdi:desk-lamp
-
-light.living_room_bulb_lamp:
-  icon: mdi:lightbulb
-
-light.living_room_chair_lightstrip:
-  icon: mdi:led-strip-variant
-
-light.living_room_lamp:
-  icon: mdi:floor-lamp
-
-light.living_room_lamp_1:
-  icon: mdi:ceiling-light
-
-light.living_room_lamp_2:
-  icon: mdi:floor-lamp
-
-light.living_room_sofa_lightstrip:
-  icon: mdi:led-strip-variant
-
-light.master_bathroom_overhead:
-  icon: mdi:vanity-light
-
-light.master_bathroom_overhead_1:
-  icon: mdi:vanity-light
-
-light.master_bathroom_overhead_2:
-  icon: mdi:vanity-light
-
-light.master_bathroom_overhead_3:
-  icon: mdi:vanity-light
-
-light.master_bedroom_east_lamp:
-  icon: mdi:lamp
-
-light.master_bedroom_east_lightstrip:
-  icon: mdi:led-strip-variant
-
-light.master_bedroom_hallway_overhead:
-  icon: mdi:ceiling-light
-
-light.master_bedroom_lightstrips:
-  icon: mdi:led-strip-variant
-
-light.master_bedroom_north_lightstrip:
-  icon: mdi:led-strip-variant
-
-light.master_bedroom_overhead:
-  icon: mdi:ceiling-light
-
-light.master_bedroom_overhead_1:
-  icon: mdi:ceiling-light
-
-light.master_bedroom_overhead_2:
-  icon: mdi:ceiling-light
-
-light.master_bedroom_west_lamp:
-  icon: mdi:lamp
-
-light.master_bedroom_west_lightstrip:
-  icon: mdi:led-strip-variant
-
-light.office_closet_east_overhead:
-  icon: mdi:lightbulb
-
-light.office_closet_overhead:
-  icon: mdi:lightbulb
-
-light.office_closet_west_overhead:
-  icon: mdi:lightbulb
-
-light.office_desk_lamp:
-  icon: mdi:desk-lamp
-
-light.office_overhead:
-  icon: mdi:ceiling-light
-
-light.office_overhead_1:
-  icon: mdi:ceiling-light
-
-light.office_overhead_2:
-  icon: mdi:ceiling-light
-
-light.front_porch_stairs_lights:
-  icon: mdi:wall-sconce-flat-variant
-
-light.living_room_christmas_tree_lights:
-  icon: mdi:pine-tree
-
 # Shades
 cover.living_room_shades:
   icon: mdi:blinds
@@ -205,9 +9,9 @@ cover.master_bedroom_shades:
   icon: mdi:blinds
 
 # Windows
-binary_sensor.bonus_room_left_window:
+binary_sensor.bonus_room_north_window:
   device_class: window
-binary_sensor.bonus_room_right_window:
+binary_sensor.bonus_room_south_window:
   device_class: window
 binary_sensor.bonus_room_small_window:
   device_class: window
@@ -221,9 +25,9 @@ binary_sensor.kitchen_window:
   device_class: window
 binary_sensor.laundry_window:
   device_class: window
-binary_sensor.living_room_window_left:
+binary_sensor.living_room_north_window:
   device_class: window
-binary_sensor.living_room_window_right:
+binary_sensor.living_room_south_window:
   device_class: window
 binary_sensor.master_bathroom_window:
   device_class: window
@@ -236,10 +40,10 @@ binary_sensor.office_window:
 binary_sensor.back_door_open:
   device_class: door
 
-binary_sensor.office_closet_door_left:
+binary_sensor.office_closet_east_door:
   device_class: door
 
-binary_sensor.office_closet_door_right:
+binary_sensor.office_closet_west_door:
   device_class: door
 
 binary_sensor.hall_closet_door:
