--- a/ui/switches.yaml
+++ b/ui/switches.yaml
@@ -17,27 +17,38 @@ cards:
       # - entity: cover.master_bedroom
       #   name: Shades
 
-  - type: entities
-    title: Office
-    show_header_toggle: true
-    entities:
-      - entity: light.office_overhead
-        name: Overhead
-      - entity: light.office_desk_lamp
-        name: Desk Lamp
-      - entity: light.office_closet_overhead
-        name: Closet
-      - entity: switch.office_space_heater_plug
-        name: Space Heater
-      # - entity: cover.office
-      #   name: Shades
+  - type: custom:vertical-stack-in-card
+    cards:
+      - type: entities
+        title: Office
+        show_header_toggle: true
+        entities:
+          - entity: light.office_overhead
+            name: Overhead
+          - entity: light.office_desk_lamp
+            name: Desk Lamp
+          - entity: light.office_closet_overhead
+            name: Closet
+          - entity: switch.office_space_heater_plug
+            name: Space Heater
+          # - entity: cover.office
+          #   name: Shades
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.office_window
+            state: "on"
+        card:
+          type: entities
+          entities:
+            - entity: binary_sensor.office_window
+              name: Window
 
   - type: entities
     title: Living Room
     entities:
       - entity: light.living_room_arc_lamp
         name: Arc Lamp
-      - entity: light.living_room_lamp
+      - entity: light.living_room_floor_lamp
         name: Floor Lamp
       - entity: light.living_room_bulb_lamp
         name: Bulb Lamp
@@ -47,6 +58,8 @@ cards:
         name: Chair Lightstrip
       - entity: light.living_room_christmas_tree_lights
         name: Christmas Tree
+      - entity: light.living_room_window_christmas_lights
+        name: Window Christmas Lights
       - entity: cover.living_room_shades
         name: Shades
 
@@ -86,7 +99,7 @@ cards:
         name: Stairs
       - entity: light.garage_hallway_overhead
         name: Hallway Overhead
-      - entity: light.garage_shop_overheads
+      - entity: light.garage_shop_lights
         name: Shop Lights
       - cover.car_garage_door
       - cover.shop_garage_door
